@@ -1,10 +1,8 @@
 package com.yulcom.inoutfolderapp.commons.mappers;
 
 import com.yulcom.inoutfolderapp.commons.dtos.in.CreateProductRequest;
-import com.yulcom.inoutfolderapp.commons.dtos.out.GetProductDto;
 import com.yulcom.inoutfolderapp.domain.entities.Product;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ProductMapper
 {
@@ -18,17 +16,8 @@ public class ProductMapper
             .build();
     }
 
-    public static GetProductDto toResponse(Product product) {
-        return GetProductDto.builder()
-            .unitValue(product.getUnitValue())
-            .quantity(product.getQuantity())
-            .designation(product.getDesignation())
-            .nature(product.getNature())
-            .build();
-    }
-
     public static List<Product> toEntityList(List<CreateProductRequest> request)
     {
-       return  request.stream().map(ProductMapper::toEntity).collect(Collectors.toList());
+       return  request.stream().map(ProductMapper::toEntity).toList();
     }
 }
